--- a/frontend-2.1.3/package.json
+++ b/frontend-2.1.3/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@agm/core": "1.0.0-beta.0",
     "@angular/animations": "^4.3.1",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.3.1",
     "@angular/compiler": "^4.3.1",
     "@angular/compiler-cli": "^4.3.1",
@@ -21,7 +22,7 @@
     "@angular/flex-layout": "2.0.0-beta.8",
     "@angular/forms": "^4.3.1",
     "@angular/http": "^4.3.1",
-    "@angular/material": "2.0.0-beta.7",
+    "@angular/material": "^2.0.0-beta.7",
     "@angular/platform-browser": "^4.3.1",
     "@angular/platform-browser-dynamic": "^4.3.1",
     "@angular/platform-server": "^4.3.1",
