--- a/frontend-2.1.3/package.json
+++ b/frontend-2.1.3/package.json
@@ -45,6 +45,7 @@
     "moment": "2.18.1",
     "ng2-breadcrumb": "^0.5.14",
     "ng2-charts": "1.6.0",
+    "ng2-dnd": "^4.2.0",
     "ng2-dragula": "1.5.0",
     "ng2-file-upload": "1.2.1",
     "ng2-toasty": "^4.0.3",
